Add db and migrations

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 OPENAI_API_KEY=<your_openai_api_key>
+
+POSTGRES_DBNAME=recite
+POSTGRES_USER=recite
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5427
+DRIVER_NAME=pgx
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DBNAME}?sslmode=disable
